k8s-utils/game2024/deploy.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: default
  name: game-2048
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: app-2048
  replicas: 1
  template:
    metadata:
      labels:
        app.kubernetes.io/name: app-2048
    spec:
      containers:
        - image: public.ecr.aws/kishorj/docker-2048:latest
          imagePullPolicy: Always
          name: app-2048
          ports:
            - containerPort: 80
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
              - matchExpressions:
                  - key: node-priority
                    operator: In
                    values:
                      - important
      tolerations:
        - key: app-priority
          operator: Equal
          value: important
          effect: NoSchedule
---
apiVersion: v1
kind: Service
metadata:
  namespace: default
  name: game-2048
  annotations:
    # service.beta.kubernetes.io/aws-load-balancer-type: "nlb"
    # service.beta.kubernetes.io/aws-load-balancer-nlb-target-type: ip
    # service.beta.kubernetes.io/aws-load-balancer-scheme: internet-facing
    # service.beta.kubernetes.io/aws-load-balancer-cross-zone-load-balancing-enabled: "true"
    # service.beta.kubernetes.io/aws-load-balancer-backend-protocol: "http"
spec:
  ports:
    - port: 3000
      targetPort: 80
      protocol: TCP
  type: ClusterIP
  # type: LoadBalancer
  selector:
    app.kubernetes.io/name: app-2048
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: default
  name: ingress-2048
  annotations:
    alb.ingress.kubernetes.io/load-balancer-name: game2048-router-alb
    alb.ingress.kubernetes.io/group.name: game2048-router.alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/certificate-arn: "arn:aws:acm:ap-northeast-2:564765949096:certificate/ef558609-fd8d-493b-aa99-d92bb310a8c8"
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP":80,"HTTPS": 443}]'
    alb.ingress.kubernetes.io/actions.redirect: '{"Type": "redirect", "RedirectConfig":{ "Protocol": "HTTPS", "Port": "443", "StatusCode": "HTTP_301"}}'
    alb.ingress.kubernetes.io/ssl-redirect: "443"
    external-dns.alpha.kubernetes.io/hostname: game2048.team.edu-tech.io
    # external-dns.alpha.kubernetes.io/exclude: "true"
spec:
  ingressClassName: alb
  rules:
    - host: game2048.team.edu-tech.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: game-2048
                port:
                  number: 3000
